added geocommons export code (wms only).
bug fixes: fixed map navigation button bug (didn't toggle properly). 
fixed metadata download

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -999,3 +999,44 @@ iframe.download {
 #featureInfo {
 	overflow: auto;
 }
+
+/* geocommons dialog */
+#geoCommonsExportForm > select {
+    left: 97px;
+    margin-top: 3px;
+    position: absolute;
+}
+
+#geoCommonsExportDialog > form {
+    line-height: 30px;
+    padding: 10px;
+}
+
+#geoCommonsExportForm > input[type="text"] {
+    left: 90px;
+    margin-top: 4px;
+    position: absolute;
+    width: 252px;
+    padding: 2px;
+}
+
+#geoCommonsExportForm > fieldset {
+	background-color: #F2F2F2;
+    border: 1px solid #CCCCCC;
+	padding: 15px;	
+}
+
+#geoCommonsExportForm > fieldset > input {
+	left: 108px;
+	position: absolute;
+	margin-top: 4px;
+}
+
+.linkButton {
+    color: blue;
+    text-decoration: underline;
+}
+
+#geoCommonsExportForm > fieldset .linkButton {
+	float: right;
+}
