--- a/geoportal_1/src/main/webapp/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/includes.jspf
@@ -1,16 +1,16 @@
 <!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
 <link rel="stylesheet" href="resources/javascript/openlayers/OpenLayers-2.11/theme/default/style.css" type="text/css" />
 <link rel="stylesheet" href="resources/javascript/openlayers/OpenLayers-2.11/theme/default/google.css" type="text/css" />
-<link rel="stylesheet" href="resources/css/jquery-ui-1.8.2.custom.css" type="text/css" />
+<link rel="stylesheet" href="resources/css/jquery-ui.custom.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/structure.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/mapDiv.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/dataTable.css" type="text/css" />
 <link rel="stylesheet" type="text/css" media="print" href="resources/css/print.css" />
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3.3&amp;sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3.10&amp;sensor=false"></script>
 <script type="text/javascript" src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script type="text/javascript" src="resources/javascript/DataTables/media/js/jquery.dataTables.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.scrollTo-min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>
 <script type="text/javascript" src="resources/javascript/panZoom.js"></script>
