--- a/geoportal_1/src/main/webapp/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/includes.jspf
@@ -1,6 +1,5 @@
 <!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
-<link rel="stylesheet" href="resources/javascript/openlayers/OpenLayers-2.11/theme/default/style.css" type="text/css" />
-<link rel="stylesheet" href="resources/javascript/openlayers/OpenLayers-2.11/theme/default/google.css" type="text/css" />
+<link rel="stylesheet" href="resources/css/google.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/jquery-ui.custom.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/structure.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/mapDiv.css" type="text/css" />
