--- a/geoportal_1/src/main/webapp/resources/javascript/openlayers/OpenLayers-2.11/theme/default/style.css
+++ b/geoportal_1/src/main/webapp/resources/javascript/openlayers/OpenLayers-2.11/theme/default/style.css
@@ -95,14 +95,14 @@ div.olControlMousePosition {
 
 .olControlOverviewMapExtentRectangle {
     overflow: hidden;
-    background-image: url("img/blank.gif");
+    background-image: url("/media/blank.gif");
     cursor: move;
     border: 2px dotted red;
 }
 .olControlOverviewMapRectReplacement {
     overflow: hidden;
     cursor: move;
-    background-image: url("img/overview_replacement.gif");
+    background-image: url("/media/overview_replacement.gif");
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -142,40 +142,23 @@ div.olControlMousePosition {
 }
 
 .olControlNavigationHistory {
-   background-image: url("img/navigation_history.png");
    background-repeat: no-repeat;
    width:  24px;
    height: 24px;
 
 }
-.olControlNavigationHistoryPreviousItemActive { 
-  background-position: 0px 0px;
-}
-.olControlNavigationHistoryPreviousItemInactive { 
-   background-position: 0px -24px;
-}
-.olControlNavigationHistoryNextItemActive { 
-   background-position: -24px 0px;
-}
-.olControlNavigationHistoryNextItemInactive { 
-   background-position: -24px -24px;
-}
 
 .olControlNavToolbar .olControlNavigationItemActive { 
-  background-image: url("img/panning-hand-on.png");
   background-repeat: no-repeat;
 }
 .olControlNavToolbar .olControlNavigationItemInactive { 
-  background-image: url("img/panning-hand-off.png");
   background-repeat: no-repeat;
 }
 .olControlNavToolbar .olControlZoomBoxItemActive { 
-  background-image: url("img/drag-rectangle-on.png");
   background-color: orange;
   background-repeat: no-repeat;
 }
 .olControlNavToolbar .olControlZoomBoxItemInactive { 
-  background-image: url("img/drag-rectangle-off.png");
   background-repeat: no-repeat;
 }
 .olControlEditingToolbar  {
@@ -185,7 +168,7 @@ div.olControlMousePosition {
     width: 200px;
 }
 .olControlEditingToolbar div { 
-  background-image: url("img/editing_tool_bar.png");
+  background-image: url("/media/editing_tool_bar.png");
   background-repeat: no-repeat;
   float:right;
   width:  24px;
@@ -217,12 +200,12 @@ div.olControlMousePosition {
   background-position: -26px -23px ;                                                                   
 }
 div.olControlSaveFeaturesItemActive { 
-    background-image: url(img/save_features_on.png);
+    background-image: url(/media/save_features_on.png);
     background-repeat: no-repeat;
     background-position: 0px 1px;
 }
 div.olControlSaveFeaturesItemInactive { 
-    background-image: url(img/save_features_off.png);
+    background-image: url(/media/save_features_off.png);
     background-repeat: no-repeat;
     background-position: 0px 1px;
 }
@@ -250,7 +233,7 @@ div.olControlSaveFeaturesItemInactive {
 }  
 
 .olControlPanPanel div {
-    background-image: url(img/pan-panel.png);
+    background-image: url(/media/pan-panel.png);
     height: 18px;
     width: 18px;
     cursor: pointer;
@@ -285,7 +268,7 @@ div.olControlSaveFeaturesItemInactive {
 } 
 
 .olControlZoomPanel div {
-    background-image: url(img/zoom-panel.png);
+    background-image: url(/media/zoom-panel.png);
     position: absolute;
     height: 18px;
     width: 18px;
@@ -311,7 +294,7 @@ div.olControlSaveFeaturesItemInactive {
 }
 
 .olPopupCloseBox {
-  background: url("img/close.gif") no-repeat;
+  background: url("/media/close.gif") no-repeat;
   cursor: pointer;
 }
 
