--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -558,7 +558,8 @@ textarea:focus {
 
 #basicSearchMapFilterContainer {
 	margin-top: 5px;
-	display: inline-block;	
+	display: inline-block;
+	visibility: hidden;	
 }
 
 #advancedSearchBox {
