--- a/geoportal_1/src/main/webapp/resources/javascript/openlayers/OpenLayers-2.11/theme/default/style.css
+++ b/geoportal_1/src/main/webapp/resources/javascript/openlayers/OpenLayers-2.11/theme/default/style.css
@@ -141,12 +141,12 @@ div.olControlMousePosition {
   position: relative;
 }
 
-.olControlNavigationHistory {
+/*.olControlNavigationHistory {
    background-repeat: no-repeat;
    width:  24px;
    height: 24px;
 
-}
+}*/
 
 .olControlNavToolbar .olControlNavigationItemActive { 
   background-repeat: no-repeat;
