--- a/geoportal_1/src/main/webapp/jspf/leftPanel.jspf
+++ b/geoportal_1/src/main/webapp/jspf/leftPanel.jspf
@@ -1,26 +1,36 @@
+    <div class="arrow_buttons">
+    	<div class="arrow_left button" title="collapse left"></div>
+    	<div class="arrow_separator"></div>
+    	<div class="arrow_right button" title="expand right"></div>
+    	
+    	<!-- <img src="resources/media/button_arrow_left.png" class="button" alt="collapse left" />
+    	<img src="resources/media/button_arrow_right.png" class="button" alt="expand right" />-->
+ 	</div>
 <div id="left_tabs"> 
 	<div id="tabs" class="ui-tabs">
 		<ul>
-			<li><a href="#gettingStartedTab"><span class="tabText">
+			<!--<li><a href="#gettingStartedTab"><span class="tabText">
 				Getting Started
 				</span></a> 
-			</li>
-			<li><a href="#searchTab"><span class="tabText">
-				Search
+			</li>-->
+			<li><a href="#searchTab"><span id="searchTabText" class="tabText">
+			    <span id="resultsNumber" class="resultsNumber">
+    			0
+    		   </span>
+				Results
 				</span></a> 
 			</li>				
 			<li><a href="#savedLayersTab">
-				<span class="tabText">
-				<img src="resources/media/shoppingcart.png" alt="Cart" />
-				Cart <span id="savedLayersNumberTab" class="savedLayersNumber">(0)</span>
-				</span></a> 
+				<div id="cartTabText" class="tabText">
+				<div class="shoppingCartIcon"></div>
+				<div>Cart <span id="savedLayersNumberTab" class="savedLayersNumber">(0)</span></div>
+				</div></a> 
 			</li>
 		</ul>
-   		<div id="gettingStartedTab" class="ui-tabs-hide">
-			<%@include file="gettingStartedTab.jspf"%>
-    	</div>
+   		<!-- <div id="gettingStartedTab" class="ui-tabs-hide">
+    	</div>-->
     	<div id="searchTab" class="ui-tabs-hide">
-			<%@include file="searchForm.jspf"%>
+			<%@include file="results.jspf"%>
     	</div>
     	<div id="savedLayersTab" class="ui-tabs-hide">
 			<%@include file="savedLayersTab.jspf"%>
